# techdengue-mt

./: .gitignore  M0_STATUS.md  M1_AUDITORIA.md  M1_COMPLETO_FINAL.md  M1_HANDOFF.md  M1_RESULTADO_FINAL.md  M1_SUMARIO_EXECUTIVO.md  PLATAFORMA_ATIVA.md  README.md  README_M1.md  SESSAO_ATUAL_RESUMO.md  SESSAO_E_DENUNCIA_COMPLETA.md  SESSAO_M1_COMPLETA.md  TESTE_M1_DASHBOARD.md  check_schema.ps1  fix_missing_function.sql  fix_user_roles.py  netlify.toml  package-lock.json  test_db.py  test_keycloak.py  test_observability.py  test_prism.py  test_upload.ps1  test_upload_v2.ps1  test_user_login.py  teste_completo_m1.ps1  validate_m0.py  validate_m1_db.ps1  validation_results.json
campo-api/: .env.example  Dockerfile  check_routes.py  requirements.txt
campo-pwa/: README.md
dados-mt/: LIRAa_MT_2025_-_Ciclo_Janeiro__classifica__o_.csv
docs/: CONHECIMENTOS_CONTA_OVOS.md  M1_AUDITORIA.md  (+14 more)
epi-api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
epi-api/app/: main.py
epi-api/app/middleware/: __init__.py  audit.py  security.py
epi-api/app/models/: denuncia.py
epi-api/app/routers/: dashboard.py  denuncias.py  etl.py  liraa.py  mapa.py  upload.py
epi-api/app/schemas/: dashboard.py  etl.py  etl_epi.py  liraa.py  mapa.py
epi-api/app/services/: dashboard_service.py  etl_base_service.py  etl_persistence.py  etl_validator.py  liraa_etl_service.py  mapa_service.py  sinan_etl_service.py
epi-api/app/tasks/: etl_tasks.py
epi-api/tests/: test_etl.py  test_etl_endpoint.py  test_etl_validator.py  test_mapa.py
epi-api/tests/test_data/: epi_example_valid.csv
(+376 files in other folders)
