[tool.poetry]
name = "techdengue-epi-api"
version = "0.1.0"
description = "TechDengue EPI API - Indicadores Epidemiológicos"
authors = ["TechDengue Team"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
